--- a/Website_Movie Castle/Views/Shared/_Layout.cshtml
+++ b/Website_Movie Castle/Views/Shared/_Layout.cshtml
@@ -27,6 +27,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Films">Films</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Aboutus">About us</a>
                     </ul>
                 </div>
             </div>
