navbar klein beetje aangepasat

--- a/Website_Movie Castle/Views/Home/Aboutus.cshtml
+++ b/Website_Movie Castle/Views/Home/Aboutus.cshtml
@@ -4,5 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Welkom bij de About us pagina!</h1>
-    <p>Aboutus</a>.</p>
+    <h2>About us</a>.</h2>
+
+    <p>Wij zijn bioscoop Movie Castle in Vlissingen.
+
+        Bij ons kunt u de leukste en nieuwste films kijken voor een lage prijs</a>.</p>
 </div>
