--- a/Website_Movie Castle/Views/Home/Aboutus.cshtml
+++ b/Website_Movie Castle/Views/Home/Aboutus.cshtml
@@ -3,8 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welkom bij de About us pagina!</h1>
-    <h2>About us</a>.</h2>
+    <h1 class="display-4">About Us</h1>
 
     <p>Wij zijn bioscoop Movie Castle in Vlissingen.
 
