--- a/Website_Movie Castle/Views/Home/Contact.cshtml
+++ b/Website_Movie Castle/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p>Contactpagina!</p>
+<p>Welkom bij de contactpagina, vul onderstaand formulier in om in contact te komen met ons.</p>
 
 
 <div  clas='container'>
