--- a/Website_Movie Castle/Views/Home/Films.cshtml
+++ b/Website_Movie Castle/Views/Home/Films.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welkom bij het filmoverzicht!</h1>
-    <p>Filmscherm</a>.</p>
+    <h1 class="display-4">Films</h1>
+    <p>Filmoverzicht</a>.</p>
 </div>
