--- a/Website_Movie Castle/Views/Home/Index.cshtml
+++ b/Website_Movie Castle/Views/Home/Index.cshtml
@@ -3,12 +3,67 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welkom bij de hoofdpagina!</h1>
-    <p>Dit is de hoofdpagina / het hoofdmenu</a>.</p>
-    @foreach(string naam in Model)
-    {
-        <p>@naam</p>
+<head>
+  <style>
+    .container {
+      position: relative;
+      width: screen-width;
+      height: 500px;
+      overflow: hidden;
     }
-</div>
+
+    .image {
+      position: absolute;
+      top: 0;
+      transition: transform 0.8s ease;
+    }
+
+    .image1 {
+      left: 50px;
+    }
+
+    .image2 {
+      left: 350px;
+    }
+    .move-left {
+      position: absolute;
+      top: 220px;
+      left: 500px;
+    }
+    .move-aside {
+      position: absolute;
+      top: 220px;
+      left: 50px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <img class="image image1" src="https://th.bing.com/th/id/OIP.KNfIqaD92jvecpbxNWWQ4wAAAA?pid=ImgDet&rs=1" width="250" height="375">
+    <img class="image image2" src="https://www.themoviedb.org/t/p/w500/1NqwE6LP9IEdOZ57NCT51ftHtWT.jpg" width="250" height="375">
+  </div>
+
+  <button class="move-aside" onclick="moveImagesAside()">←</button>
+
+  <script>
+    function moveImagesAside() {
+      var image1 = document.querySelector('.image1');
+      var image2 = document.querySelector('.image2');
+
+      image1.style.transform = 'translateX(250px)';
+      image2.style.transform = 'translateX(250px)';
+    }
+  </script>
+
+   <button class="move-left" onclick="moveImagesleft()">←</button>
+
+  <script>
+    function moveImagesleft() {
+      var image1 = document.querySelector('.image1');
+      var image2 = document.querySelector('.image2');
+
+      image1.style.transform = 'translateX(-250px)';
+      image2.style.transform = 'translateX(-250px)';
+    }
+  </script>
+</body>
