--- a/Website_Movie Castle/Views/Home/Aboutus.cshtml
+++ b/Website_Movie Castle/Views/Home/Aboutus.cshtml
@@ -4,8 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">About Us</h1>
-
-    <p>Wij zijn bioscoop Movie Castle in Vlissingen.
-
-        Bij ons kunt u de leukste en nieuwste films kijken voor een lage prijs</a>.</p>
 </div>
+
+<body>
+    Wij zijn bioscoop Movie Castle in Vlissingen. Bij ons kunt u de leukste en nieuwste films kijken voor een lage prijs. <br /> Wilt u ons bezoeken? Ons adres is Dorpstraat 17, Vlissingen 2442 EA. We kijken ernaar uit u te zien!
+</body>
