Home pagina systeem verbeterd evenals foto's toegevoegd, kleine aanpassingen contact formulier: grootte en naam inputveld aangepast

--- a/Website_Movie Castle/Views/Home/Contact.cshtml
+++ b/Website_Movie Castle/Views/Home/Contact.cshtml
@@ -30,8 +30,8 @@
     <label for="onderwerp">Onderwerp</label>
     <input type="text" id="onderwerp" name="Onderwerp" placeholder="Onderwerp..." required>
 
-    <label for="">Onderwerp</label>
-    <textarea id="informatie" name="Informatie" placeholder="Typ hier uw vraag, opmerking, solicitatieverzoek of feedback..." style="height:200px" required ></textarea>
+    <label for="">Bericht</label>
+    <textarea id="informatie" name="Bericht" placeholder="Typ hier uw vraag, opmerking, solicitatieverzoek of feedback..." style="height:150px" required ></textarea>
 
     <input type="submit" value="Verzend">
 
