Font aangepast en tekstgrootte verhoogt

--- a/Website_Movie Castle/wwwroot/css/site.css
+++ b/Website_Movie Castle/wwwroot/css/site.css
@@ -2,8 +2,8 @@
 
 /* Apply default styles to body */
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
+    font-family: Copperplate, fantasy;
+    font-size: 22px;
     line-height: 1.5;
     color: white;
     background-color: #B30E2A;
