Titels op alle pagina's gelijkvormig gemaakt en op een consistente plaats gezet (links in beeld)

--- a/Website_Movie Castle/Views/Home/Aboutus.cshtml
+++ b/Website_Movie Castle/Views/Home/Aboutus.cshtml
@@ -2,9 +2,7 @@
     ViewData["Title"] = "About us";
 }
 
-<div class="text-center">
-    <h1 class="display-4">About Us</h1>
-</div>
+<h1>About Us</h1>
 
 <body>
     Wij zijn bioscoop Movie Castle in Vlissingen. Bij ons kunt u de leukste en nieuwste films kijken voor een lage prijs. <br /> Wilt u ons bezoeken? Ons adres is Dorpstraat 17, Vlissingen 2442 EA. We kijken ernaar uit u te zien!
