--- a/Website_Movie Castle/Views/Home/Films.cshtml
+++ b/Website_Movie Castle/Views/Home/Films.cshtml
@@ -2,7 +2,5 @@
     ViewData["Title"] = "Films";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Films</h1>
-    <p>Filmoverzicht</a>.</p>
-</div>
+<h1>Films</h1>
+<p>Filmoverzicht.</p>
