Kleine tekstverandering, nav-bar afscheiding nu in de lichte (witte) versie, dit sluit aan bij de witte tekst van de website

--- a/Website_Movie Castle/Views/Home/Contact.cshtml
+++ b/Website_Movie Castle/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p>Welkom bij de contactpagina, vul onderstaand formulier in om in contact te komen met ons.</p>
+<p>Welkom bij de contactpagina, vul onderstaand formulier in om in contact te komen met onze ervaren werknemers.</p>
 
 
 <div  clas='container'>
