Plaatjes zijn klikbaar en gaan nu naar een andere pagina voor de film

--- a/Website_Movie Castle/Views/Home/Index.cshtml
+++ b/Website_Movie Castle/Views/Home/Index.cshtml
@@ -53,11 +53,11 @@
 </head>
 <body>
     <div class="container">
-        <img class="image image1" src="https://th.bing.com/th/id/OIP.KNfIqaD92jvecpbxNWWQ4wAAAA?pid=ImgDet&rs=1" width="250" height="375">
-        <img class="image image2" src="https://www.themoviedb.org/t/p/w500/1NqwE6LP9IEdOZ57NCT51ftHtWT.jpg" width="250" height="375">
-        <img class="image image3" src="https://images.pathe-thuis.nl/32418_450x640.jpg" width="250" height="375">
-        <img class="image image4" src="https://amc-theatres-res.cloudinary.com/image/upload/f_auto,fl_lossy,h_465,q_auto,w_310/v1676302257/amc-cdn/production/2/movies/62400/62358/PosterDynamic/149048.jpg" width="250" height="375">
-        <img class="image image5" src="https://assets.voxcinemas.com/posters/P_HO00009455.jpg" width="250" height="375">
+        <a asp-area="" asp-controller="Home" asp-action="Avengers_endgame"><img class="image image1" src="https://th.bing.com/th/id/OIP.KNfIqaD92jvecpbxNWWQ4wAAAA?pid=ImgDet&rs=1" width="250" height="375"></a>
+        <a asp-area="" asp-controller="Home" asp-action="Puss_In_Boots"><img class="image image2" src="https://www.themoviedb.org/t/p/w500/1NqwE6LP9IEdOZ57NCT51ftHtWT.jpg" width="250" height="375"></a>
+       <a asp-area="" asp-controller="Home" asp-action="Avatar_Way_of_Water"><img class="image image3" src="https://images.pathe-thuis.nl/32418_450x640.jpg" width="250" height="375"></a>
+        <a asp-area="" asp-controller="Home" asp-action="Guardians_of_The_Galaxy"><img class="image image4" src="https://amc-theatres-res.cloudinary.com/image/upload/f_auto,fl_lossy,h_465,q_auto,w_310/v1676302257/amc-cdn/production/2/movies/62400/62358/PosterDynamic/149048.jpg" width="250" height="375"></a>
+        <a asp-area="" asp-controller="Home" asp-action="Little_Mermaid"><img class="image image5" src="https://assets.voxcinemas.com/posters/P_HO00009455.jpg" width="250" height="375"></a>
     </div>
 
     <button class="move-aside" onclick="moveImagesAside()">←</button>
