About us pagina tekst ingevoegd die verwijst naar de contact pagina

--- a/Website_Movie Castle/Views/Home/Aboutus.cshtml
+++ b/Website_Movie Castle/Views/Home/Aboutus.cshtml
@@ -6,4 +6,6 @@
 
 <body>
     Wij zijn bioscoop Movie Castle in Vlissingen. Bij ons kunt u de leukste en nieuwste films kijken voor een lage prijs. <br /> Wilt u ons bezoeken? Ons adres is Dorpstraat 17, Vlissingen 2442 EA. We kijken ernaar uit u te zien!
+    <br /> <br />Onze bioscoop is al ruim 20 jaar een expert rond de filmindustrie, onze bioscoop bevat gegarandeerd de nieuwste technische systemen!<br /> <br />
+    Heeft u een vraag over onze bioscoop of ons aanbod? Aarzel niet om contact met ons op te nemen via de <a class="text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact-pagina</a>.
 </body>
