Google maps afbeelding en 'hyperlink' in deze afbeelding naar de desbetreffende google maps pagina toegevoegd

--- a/Website_Movie Castle/Views/Home/Aboutus.cshtml
+++ b/Website_Movie Castle/Views/Home/Aboutus.cshtml
@@ -8,4 +8,7 @@
     Wij zijn bioscoop Movie Castle in Vlissingen. Bij ons kunt u de leukste en nieuwste films kijken voor een lage prijs. <br /> Wilt u ons bezoeken? Ons adres is Dorpstraat 17, Vlissingen 2442 EA. We kijken ernaar uit u te zien!
     <br /> <br />Onze bioscoop is al ruim 20 jaar een expert rond de filmindustrie, onze bioscoop bevat gegarandeerd de nieuwste technische systemen!<br /> <br />
     Heeft u een vraag over onze bioscoop of ons aanbod? Aarzel niet om contact met ons op te nemen via de <a class="text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact-pagina</a>.
+    <a href="https://goo.gl/maps/6SD8fjaecH8NAFMK8" target="_blank">
+    <img class="image image5" src="https://cdn.icon-icons.com/icons2/3053/PNG/512/google_maps_macos_bigsur_icon_190117.png" width="256" height="256">
+    </a>
 </body>
