--- a/Website_Movie Castle/Views/Home/Aboutus.cshtml
+++ b/Website_Movie Castle/Views/Home/Aboutus.cshtml
@@ -9,6 +9,12 @@
     <br /> <br />Onze bioscoop is al ruim 20 jaar een expert rond de filmindustrie, onze bioscoop bevat gegarandeerd de nieuwste technische systemen!<br /> <br />
     Heeft u een vraag over onze bioscoop of ons aanbod? Aarzel niet om contact met ons op te nemen via de <a class="text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact-pagina</a>.
     <a href="https://goo.gl/maps/6SD8fjaecH8NAFMK8" target="_blank">
-    <img class="image image5" src="https://cdn.icon-icons.com/icons2/3053/PNG/512/google_maps_macos_bigsur_icon_190117.png" width="256" height="256">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2486.365144160213!2d3.6254632000000004!3d51.451451999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c49a7108bde359%3A0x6d710920e2c01c84!2sDorpsstraat%2017%2C%204389%20TN%20Ritthem!5e0!3m2!1snl!2snl!4v1686131068914!5m2!1snl!2snl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </a>
+    <a href="https://www.instagram.com/movie_castle/" target="_blank">
+    <iframe src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </a>
+    <a href="https://youtube.com/movie-castle" target="_blank">
+    <iframe src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Logo_of_YouTube_%282015-2017%29.svg" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </a>
 </body>
