Video embeds voor trailers op youtube toegevoegd op elke film-detail-pagina inclusief loop en autoplay, speciale tekst-classes aangemaakt (text 1 titels, text2 normale tekst), algemene tekst toegevoegd home pagina

--- a/Website_Movie Castle/wwwroot/css/site.css
+++ b/Website_Movie Castle/wwwroot/css/site.css
@@ -8,6 +8,15 @@ a {
     outline: none;
 }
 
+text1 {
+    text-align:center;
+    font-size:30px;
+}
+
+text2 {
+    font-size: 22px;
+}
+
 /* Algemene stjil van de body-stukken van de website */
 body {
     font-family: Copperplate, fantasy;
