--- a/Website_Movie Castle/Views/Home/Avatar_Way_of_Water.cshtml
+++ b/Website_Movie Castle/Views/Home/Avatar_Way_of_Water.cshtml
@@ -5,5 +5,7 @@
 <h1>Avatar</h1>
 
 <body>
-Filler
+
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/d9MyW72ELq0?autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 </body>
