--- a/Website_Movie Castle/Views/Home/Contact.cshtml
+++ b/Website_Movie Castle/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<p>Welkom bij de contactpagina, vul onderstaand formulier in om in contact te komen met onze ervaren werknemers.</p>
+<text2>Welkom bij de contactpagina, vul onderstaand formulier in om in contact te komen met onze ervaren werknemers.</text2>
 
 
 <div  clas='container'>
