--- a/Website_Movie Castle/Views/Home/Avengers_endgame.cshtml
+++ b/Website_Movie Castle/Views/Home/Avengers_endgame.cshtml
@@ -3,7 +3,50 @@
 }
 
 <h1>Avengers Endgame</h1>
+<html>
+  <head>
+    <style>
+      #container {
+        display: block;
+      }
 
+     
+      #grey-box {
+        flex: 1;
+        background-color: grey;
+        padding: 50px;
+        margin-left: 1000px;
+        color: white;
+      }
+
+       .image {
+            position: relative;
+            top: 0;
+           }
+
+        .image1 {
+            left: 50px;
+        }
+
+      input[type="text"] {
+        width: 100%;
+        padding: 5px;
+        margin-bottom: 10px;
+      }
+    </style>
+  </head>
+  <body>
+         <div id="grey-box">
+    it work
+      </div>
+    </div>
+  </body>
+</html>
+<body>
+    <div class="container">
+        <a asp-area="" asp-controller="Home" asp-action="Avengers_endgame"><img class="image image1" src="https://th.bing.com/th/id/OIP.KNfIqaD92jvecpbxNWWQ4wAAAA?pid=ImgDet&rs=1" width="250" height="375"></a>
+            </div>
+    </body>
 <body>
 
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/TcMBFSGVi1c?autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
