Positie van hyperlinks verbeterd: nu naast elkaar mbv classes, kleine aanpassingen grootte afbeeldingen

--- a/Website_Movie Castle/wwwroot/css/site.css
+++ b/Website_Movie Castle/wwwroot/css/site.css
@@ -1,6 +1,17 @@
+.rij {
+    display: flex;
+}
 
-iframe {
-    margin-top: 50px;
+.kolom {
+    flex: 33.33%;
+    margin-top:75px;
+    vertical-align:middle;
+}
+
+@media screen and (max-width: 1000px) {
+    .kolom {
+        width: 100%;
+    }
 }
 
 a {
