--- a/Website_Movie Castle/Views/Home/Avatar_Way_of_Water.cshtml
+++ b/Website_Movie Castle/Views/Home/Avatar_Way_of_Water.cshtml
@@ -3,7 +3,45 @@
 }
 
 <h1>Avatar</h1>
+<html>
+  <head>
+    <style>
+      #container {
+        display: block;
+      }
 
+     
+      #grey-box {
+        flex: 1;
+        background-color: grey;
+        padding: 50px;
+        margin-left: 1000px;
+        color: white;
+      }
+
+       .image {
+            position: relative;
+            top: 0;
+           }
+
+        .image1 {
+            left: 50px;
+        }
+
+      input[type="text"] {
+        width: 100%;
+        padding: 5px;
+        margin-bottom: 10px;
+      }
+    </style>
+  </head>
+  <body>
+         <div id="grey-box">
+    it work
+      </div>
+    </div>
+  </body>
+</html>
 <body>
 
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/d9MyW72ELq0?autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
