--- a/Website_Movie Castle/Views/Home/Puss_In_Boots.cshtml
+++ b/Website_Movie Castle/Views/Home/Puss_In_Boots.cshtml
@@ -4,6 +4,46 @@
 
 <h1>Puss in Boots</h1>
 
+<a asp-area="" asp-controller="Home" asp-action="Puss_In_Boots"><img class="image image2" src="https://www.themoviedb.org/t/p/w500/1NqwE6LP9IEdOZ57NCT51ftHtWT.jpg" width="250" height="375"></a>
+<html>
+  <head>
+    <style>
+      #container {
+        display: block;
+      }
+
+     
+      #grey-box {
+        flex: 1;
+        background-color: grey;
+        padding: 50px;
+        margin-left: 1000px;
+        color: white;
+      }
+
+       .image {
+            position: relative;
+            top: 0;
+           }
+
+        .image1 {
+            left: 50px;
+        }
+
+      input[type="text"] {
+        width: 100%;
+        padding: 5px;
+        margin-bottom: 10px;
+      }
+    </style>
+  </head>
+  <body>
+         <div id="grey-box">
+    it work
+      </div>
+    </div>
+  </body>
+</html>
 <body>
 
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/tHb7WlgyaUc?autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
