--- a/Website_Movie Castle/Views/Home/Index.cshtml
+++ b/Website_Movie Castle/Views/Home/Index.cshtml
@@ -7,6 +7,14 @@
 <p>Welkom bij de website van Movie Castle - dé bioscoop van Vlissingen!</p>
 
 <style>
+
+button {
+    background-color: #B30E2A;
+    cursor: pointer;
+    border: 2px solid white;
+    color:white;
+    
+}
 .container {
     position: relative;
     width: 950px;
@@ -44,9 +52,10 @@
     position: absolute;
     top: 220px;
     left: 900px;
+    vertical-align:central;
 }
 
-body{ 
+body { 
     background-image: url('https://www.hollandfilmnieuws.nl/files/bioscoopzaal-foto-wong-zihoo-via-unsplash.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed; 
@@ -57,9 +66,17 @@ body{
     position: absolute;
     top: 220px;
     left: 50px;
+    vertical-align:middle;
 }
 
-    </style >
+.navbar-light .navbar-brand {
+    background-image: url('https://www.hollandfilmnieuws.nl/files/bioscoopzaal-foto-wong-zihoo-via-unsplash.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+</style >
 <body>
     <div class="container">
         <a asp-area="" asp-controller="Home" asp-action="Avengers_endgame"><img class="image image1" src="https://th.bing.com/th/id/OIP.KNfIqaD92jvecpbxNWWQ4wAAAA?pid=ImgDet&rs=1" width="250" height="375"></a>
