--- a/Website_Movie Castle/Views/Home/Films.cshtml
+++ b/Website_Movie Castle/Views/Home/Films.cshtml
@@ -2,5 +2,61 @@
     ViewData["Title"] = "Films";
 }
 
+
 <h1>Films</h1>
 <p>Filmoverzicht.</p>
+
+
+<head>
+  <title>Dark Grey Table</title>
+  <style>
+    table {
+      width: 100%;
+      background-color: darkgrey;
+      color: white;
+    }
+   
+    td {
+      padding: 10px;
+    }
+  </style>
+</head>
+<body>
+  <table>
+    <tr>
+      <td><img src="https://th.bing.com/th/id/OIP.KNfIqaD92jvecpbxNWWQ4wAAAA?pid=ImgDet&rs=1" alt="Image 1" width="100" height="150"></td>
+      <td>Row 1, Column 2</td>
+      <td>Row 1, Column 3</td>
+      <td>Row 1, Column 4</td>
+      <td>Row 1, Column 5</td>
+    </tr>
+    <tr>
+      <td><img src="https://www.themoviedb.org/t/p/w500/1NqwE6LP9IEdOZ57NCT51ftHtWT.jpg" alt="Image 2" width="100" height="150"></td>
+      <td>Row 2, Column 2</td>
+      <td>Row 2, Column 3</td>
+      <td>Row 2, Column 4</td>
+      <td>Row 2, Column 5</td>
+    </tr>
+    <tr>
+      <td><img src="https://images.pathe-thuis.nl/32418_450x640.jpg" alt="Image 3" width="100" height="150"></td>
+      <td>Row 3, Column 2</td>
+      <td>Row 3, Column 3</td>
+      <td>Row 3, Column 4</td>
+      <td>Row 3, Column 5</td>
+    </tr>
+    <tr>
+      <td><img src="https://amc-theatres-res.cloudinary.com/image/upload/f_auto,fl_lossy,h_465,q_auto,w_310/v1676302257/amc-cdn/production/2/movies/62400/62358/PosterDynamic/149048.jpg" alt="Image 4"  width="100" height="150"></td>
+      <td>Row 4, Column 2</td>
+      <td>Row 4, Column 3</td>
+      <td>Row 4, Column 4</td>
+      <td>Row 4, Column 5</td>
+    </tr>
+    <tr>
+      <td><img src="https://assets.voxcinemas.com/posters/P_HO00009455.jpg" alt="Image 5"  width="100" height="150"></td>
+      <td>Row 5, Column 2</td>
+      <td>Row 5, Column 3</td>
+      <td>Row 5, Column 4</td>
+      <td>Row 5, Column 5</td>
+    </tr>
+  </table>
+</body>
