--- a/Website_Movie Castle/Views/Home/Index.cshtml
+++ b/Website_Movie Castle/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<p>Welkom bij de website van Movie Castle - dé bioscoop van Vlissingen!</p>
+<text1>Welkom bij de website van Movie Castle - dé bioscoop van Vlissingen!</text1>
 
 <style>
 
