--- a/Website_Movie Castle/wwwroot/css/site.css
+++ b/Website_Movie Castle/wwwroot/css/site.css
@@ -17,6 +17,7 @@
     display:none;
 }
 
+
 #cookies-button{
     border-radius:5px;
     padding:8px 12px 8px 12px;
@@ -64,8 +65,9 @@ a {
 }
 
 text1 {
-    text-align:center;
-    font-size:30px;
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 100px;
 }
 
 text2 {
