Spelfouten contact opgelost

--- a/Website_Movie Castle/Views/Home/Contact.cshtml
+++ b/Website_Movie Castle/Views/Home/Contact.cshtml
@@ -22,7 +22,7 @@
     <label for="reden">Reden van Contact</label>
     <select id="reden" name="Reden">
       <option value="vraag">Vraag</option>
-      <option value="solliciteren">Soliciteren</option>
+      <option value="solliciteren">Solliciteren</option>
       <option value="opmerking">Opmerking</option>
       <option value="feedback">Feedback</option>
     </select>
