Inhoud filmpagina toegevoegd inclusief links naar filmspecifieke-paginas (detailpaginas), kleine aanpassingen aan tekstsoorten zoals titel en css aangepast op tabel in films (achtergrondkleur en tekstkleur)

--- a/Website_Movie Castle/Views/Home/Aboutus.cshtml
+++ b/Website_Movie Castle/Views/Home/Aboutus.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "About us";
+    ViewData["Title"] = "About Us";
 }
 
-<text1>About Us<br /></text1>
+<h1>@ViewData["Title"]</h1>
    
 <text2>
     Wij zijn bioscoop Movie Castle in Vlissingen. Bij ons kunt u de leukste en nieuwste films kijken voor een lage prijs. <br /> Wilt u ons bezoeken? Ons adres is Dorpstraat 17, Vlissingen 2442 EA. We kijken ernaar uit u te zien!
