--- a/Website_Movie Castle/wwwroot/css/site.css
+++ b/Website_Movie Castle/wwwroot/css/site.css
@@ -1,3 +1,4 @@
+
 a {
     color:#E0B114;
 }
@@ -8,41 +9,52 @@ a:hover {
 
 
 .containercookie {
-    width:1600px;
-    margin:auto;
+    width: 900px;
+    margin: auto;
+    text-align: center;
 }
 
 .subcontainer {
-    width:85%;
-    margin:auto;
+    width: 85%;
+    margin: auto;
+    text-align: center;
 }
 
-#cookies{
-    width:100%;
-    position:fixed;
-    bottom:0;
-    color:white;
-    z-index:1;
-    display:none;
+#cookies {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    color: white;
+    z-index: 1;
+    display: none;
+    color: white;
+    align-items: center;
+    text-align: center;
 }
 
 
-#cookies-button{
-    border-radius:5px;
-    padding:8px 12px 8px 12px;
-    cursor:pointer;
-    border:3px solid white;
-    background-color:black;
-    color:white;
+#cookies-button {
+    border-radius: 5px;
+    padding: 8px 12px 8px 12px;
+    cursor: pointer;
+    border: 4px solid white;
+    background-color: black;
+    color: white;
+    align-items: center;
+    text-align: center;
 }
 
-.cookies{
-    min-height:70px;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    flex-wrap:wrap;
-    gap:10px;
+.cookies {
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    background-color: grey;
+    text-align: center;
+    padding: 8px 12px 2px 12px;
+    border: 7px solid white;
 }
 
 @media(max-width:1600px){
@@ -76,7 +88,6 @@ a {
 text1 {
     text-align: center;
     font-size: 30px;
-    margin-bottom: 100px;
 }
 
 text2 {
