--- a/Website_Movie Castle/Views/Home/Avatar_Way_of_Water.cshtml
+++ b/Website_Movie Castle/Views/Home/Avatar_Way_of_Water.cshtml
@@ -6,17 +6,29 @@
 <html>
   <head>
     <style>
+      h1 {
+          margin-bottom: 25px;
+      }
+
+      iframe {
+          padding: 1px;
+          align-content: center;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+      }
       #container {
         display: block;
       }
 
-     
+
       #grey-box {
-        flex: 1;
-        background-color: grey;
-        padding: 50px;
-        margin-left: 1000px;
-        color: white;
+          flex: 1;
+          background-color: grey;
+          padding: 50px;
+          display: flex;
+          color: white;
+          border-radius: 25px;
       }
 
        .image {
@@ -35,15 +47,15 @@
       }
     </style>
   </head>
+
   <body>
-         <div id="grey-box">
-    it work
+    <div id="grey-box">
+        Avatar: The Way of Water vertelt het verhaal van de familie Sully (Jake, Neytiri en hun kinderen) en de problemen waar ze tegenaan lopen, de moeite die ze doen om elkaar te beschermen, de gevechten die ze moeten aangaan om in leven te blijven en de tragedies die ze te verduren krijgen.
       </div>
-    </div>
-  </body>
-</html>
-<body>
+    <button class="buttonticket"> <a class="text-light" asp-area="" asp-controller="Home" asp-action="Tickets">Koop Tickets!</a> </button>
 
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/d9MyW72ELq0?autoplay=1&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 </body>
+
+</html>
