--- a/Website_Movie Castle/Views/Home/Guardians_of_The_Galaxy.cshtml
+++ b/Website_Movie Castle/Views/Home/Guardians_of_The_Galaxy.cshtml
@@ -6,18 +6,29 @@
 <html>
   <head>
     <style>
-      #container {
-        display: block;
+      h1 {
+          margin-bottom:25px;
       }
+      iframe {
+          padding:1px;
+          align-content:center;
+          display:block;
+          margin-left: auto;
+          margin-right: auto;
+      }
+      #container {
+        margin:50px;
+        }
 
      
       #grey-box {
         flex: 1;
         background-color: grey;
         padding: 50px;
-        margin-left: 1000px;
+        display: flex;
         color: white;
-      }
+        border-radius: 25px;
+        }
 
        .image {
             position: relative;
@@ -35,14 +46,16 @@
       }
     </style>
   </head>
-  <body>
-         <div id="grey-box">
-    it work
-      </div>
-    </div>
-  </body>
-</html>
+
 <body>
 
+    <div id="grey-box">
+        In Marvel Studios Guardians of the Galaxy Vol. 3 zien onze geliefde buitenbeentjes er anders uit dan we gewend zijn.<br />Peter Quill is nog steeds aan het bijkomen na het verlies van Gamora, maar hij moet zijn team om zich heen verzamelen om zowel het universum als iemand van zijn eigen team te verdedigen. Als deze missie niet succesvol wordt afgerond, zou dat mogelijk kunnen leiden tot het einde van de Guardians zoals we die kennen.<br /> 
+    </div>
+    <button class="buttonticket"> <a class="text-light" asp-area="" asp-controller="Home" asp-action="Tickets">Koop Tickets!</a> </button>
+
 <iframe width="1120" height="630" src="https://www.youtube.com/embed/u3V5KDHRQvk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 </body>
+
+</html>
