--- a/Website_Movie Castle/wwwroot/css/site.css
+++ b/Website_Movie Castle/wwwroot/css/site.css
@@ -156,3 +156,30 @@ input[type=submit] {
     padding: 20px;
 }
 
+.buttonticket {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 90px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    background-color: #E0B114;
+    font-size: 30px;
+    border-radius: 10px;
+}
+
+.buttonticket:hover {
+    background-color: #C75910;
+}
+
+
+
